[package]
name = "edmv"
version = "0.1.0"
authors = ["Eric Perrotta <emperrotta@gmail.com>"]
homepage = "https://github.com/ericperrotta/edmv"
description = "A tool for bulk-renaming files using the editor of your choice"

[dependencies]
clap = "2.31.2"
tempfile = "3.0.1"

[dev-dependencies]
executable-path = "1.0.0"